# rs-soroban-env

./: .gitignore  Cargo.toml  Makefile  README.md  cackle.toml  deny.toml  publish-dry-run.sh  rust-toolchain.toml  setup-sccache.sh
.cargo/: config.toml
soroban-bench-utils/: Cargo.toml
soroban-bench-utils/src/: lib.rs  tracker.rs
soroban-builtin-sdk-macros/: Cargo.toml
soroban-builtin-sdk-macros/src/: derive_fn.rs  derive_type.rs  lib.rs
soroban-env-common/: Cargo.toml  build.rs  env.json
soroban-env-common/src/: abi.rs  arbitrary.rs  array.rs  bitset.rs  bytes.rs  checked_env.rs  compare.rs  convert.rs  depth_guard.rs  env.json  env.rs  env_val.rs  error.rs  hash.rs  invoker.rs  lib.rs  meta.rs  num.rs  object.rs  option.rs  raw_val.rs  result.rs  static.rs  status.rs  storage_type.rs  str.rs  string.rs  symbol.rs  tuple.rs  unimplemented_env.rs  val.rs  val_wrapper.rs  vmcaller_checked_env.rs  vmcaller_env.rs  wrapper_macros.rs
soroban-env-common/tests/: array.rs  no_std.rs  option.rs
soroban-env-common/tests/no_std/: Cargo.toml
soroban-env-guest/: Cargo.toml
soroban-env-guest/src/: guest.rs  lib.rs
soroban-env-host/: Cargo.toml  build.rs  observations.json
soroban-env-host/benches/: calibrate_host_ops.rs  calibrate_wasm_insns.rs  common.rs  variation_histograms.rs  worst_case_linear_models.rs
soroban-env-host/benches/common/: measure.rs  mod.rs  modelfit.rs  rusagev4.rs  util.rs
soroban-env-host/fuzz/: .gitignore  Cargo.toml  Makefile  README.md  custom_getrandom.c  fuzz-lcov-baseline.info
soroban-env-host/fuzz/fuzz_targets/: expr.rs  fuzz_target_1.rs  log_from_linear_memory.rs  wasmi.rs
soroban-env-host/observations/: test__address__invalid_strkey_to_address_conversion.json  test__address__invalid_strkey_to_muxed_address_conversion.json  test__address__test_account_address_conversions.json  test__address__test_account_address_conversions_with_muxed_address.json  test__address__test_contract_address_conversions.json  test__address__test_contract_address_conversions_with_muxed_address.json  test__address__test_muxed_address_to_components_conversion.json  test__backtrace__test_backtrace_native.json  test__backtrace__test_backtrace_wasm.json  test__basic__f32_does_not_work.json  test__basic__i64_roundtrip.json  test__basic__tuple_roundtrip.json  test__basic__u64_roundtrip.json  test__bls12_381__g1_is_on_curve.json  test__bls12_381__g2_add.json  test__bls12_381__g2_is_on_curve.json  test__bls12_381__g2_msm.json  test__bls12_381__map_fp2_to_g2.json  test__bn254__ethereum_bn254_add_tests.json  test__bn254__ethereum_bn254_pairing_tests.json  test__bn254__g1_add_mul_hardcoded.json  test__bn254__hardcoded_serialization.json  test__bn254__test_bn254_g1_mul.json  test__budget_metering__xdr_object_conversion.json  test__bytes__bytes_put_out_of_bound.json  test__bytes__bytes_slice_start_equal_len.json  test__bytes__bytes_slice_start_greater_than_end.json  test__bytes__bytes_slice_start_greater_than_len.json  test__bytes__bytes_suite_of_tests.json  test__bytes__bytes_xdr_roundtrip.json  test__bytes__instantiate_oversized_bytes_from_linear_memory.json  test__bytes__instantiate_oversized_bytes_from_slice.json  test__bytes__linear_memory_operations.json  test__bytes__test_bytes_out_of_cpu_budget.json  test__bytes__test_bytes_out_of_mem_budget.json  test__bytes__test_malformed_xdr_decoding.json  test__complex__run_complex_1.json  test__complex__run_complex_2.json  test__crypto__ed25519_verify_test.json  test__crypto__keccak256_test.json  (+488 more)
soroban-env-host/src/: auth.rs  budget.rs  builtin_contracts.rs  e2e_invoke.rs  e2e_testutils.rs  events.rs  expiration_ledger_bumps.rs  fees.rs  fuzz.rs  host.rs  host_object.rs  ledger_info.rs  lib.rs  macros.rs  native_contract.rs  preflight.rs  storage.rs  test.rs  testutils.rs  vm.rs  weak_host.rs
soroban-env-host/tests/: array.rs  bls.rs  ed25519_edge_cases.rs  fees.rs  integration.rs  option.rs  secp256r1_sig_ver.rs
soroban-env-host/wasm-examples/: example_add_i32.wasm  example_create_contract.wasm  example_invoke_contract.wasm  example_linear_memory.wasm  example_vec.wasm
soroban-env-macros/: Cargo.toml
soroban-env-macros/src/: call_macro_with_all_host_functions.rs  derive_fn.rs  derive_type.rs  lib.rs  synth_dispatch_host_fn_tests.rs  synth_linear_memory_tests.rs  synth_wasm_expr_type.rs
soroban-fuzz-host/: Cargo.toml
soroban-fuzz-host/debug_logging/: Cargo.toml
soroban-fuzz-host/fuzz/: Cargo.toml
soroban-fuzz-host/fuzz-workspace/: Cargo.toml
soroban-fuzz-targets/: Cargo.toml
soroban-fuzz-targets/src/: expr.rs  lib.rs  wasmi.rs
soroban-native-sdk-macros/: Cargo.toml
soroban-native-sdk-macros/src/: derive_fn.rs  derive_type.rs  lib.rs
soroban-simulation/: Cargo.toml
soroban-simulation/src/: fees.rs  ledger_storage.rs  lib.rs  network_config.rs  resources.rs  simulation.rs  snapshot_source.rs  state_ttl.rs  test.rs  testutils.rs
soroban-synth-wasm/: Cargo.toml
soroban-synth-wasm/src/: expr.rs  func_emitter.rs  host_funcs.rs  lib.rs  mod_emitter.rs  test.rs
soroban-test-wasms/wasm-workspace/: Cargo.toml  Makefile  README.md
stellar-contract-env/: Cargo.toml
stellar-contract-env-common/: Cargo.toml
stellar-contract-env-common/src/: bitset.rs  checked_env.rs  convert.rs  env.rs  env_obj.rs  env_val.rs  has_env.rs  lib.rs  meta.rs  obj_xdr_converter.rs  object.rs  option.rs  raw_obj.rs  raw_val.rs  rt.rs  shallow_eq.rs  static.rs  status.rs  symbol.rs  tagged_val.rs  transform.rs  tuple.rs  unimplemented_env.rs  val.rs  val_wrapper.rs  version.rs  xdr_converter.rs
stellar-contract-env-host/: Cargo.toml
stellar-contract-env-host/benches/: calibrate_host_ops.rs  calibrate_wasm_insns.rs
stellar-contract-env-host/src/: budget.rs  events.rs  host.rs  host_object.rs  lib.rs  storage.rs  test.rs  vm.rs  weak_host.rs
stellar-contract-env-host/tests/: integration.rs
stellar-contract-env-host/wasm-examples/: example_add_i32.wasm  example_call.wasm  example_create_contract.wasm  example_invoke_contract.wasm  example_linear_memory.wasm  example_vec.wasm
stellar-contract-env/src/: lib.rs
(+3253 files in other folders)
