[workspace]
resolver = "2"

members = [
    "soroban-env-host",
    "soroban-env-guest",
    "soroban-env-common",
    "soroban-env-common/tests/no_std",
    "soroban-env-macros",
    "soroban-builtin-sdk-macros",
    "soroban-test-wasms",
    "soroban-synth-wasm",
    "soroban-bench-utils",
    "soroban-simulation",
]

exclude = ["soroban-test-wasms/wasm-workspace"]

[workspace.package]
# NB: When bumping the major version make sure to clean up the
# code guarded by `unstable-*` features to make it enabled
# unconditionally.
version = "22.0.0"
rust-version = "1.79.0"

[workspace.dependencies]
soroban-env-common = { version = "=22.0.0", path = "soroban-env-common", default-features = false }
soroban-env-guest = { version = "=22.0.0", path = "soroban-env-guest" }
soroban-env-host = { version = "=22.0.0", path = "soroban-env-host" }
soroban-env-macros = { version = "=22.0.0", path = "soroban-env-macros" }
soroban-builtin-sdk-macros = { version = "=22.0.0", path = "soroban-builtin-sdk-macros" }
# NB: this must match the wasmparser version wasmi is using
wasmparser = "=0.116.1"

# NB: When updating, also update the version in rs-soroban-env dev-dependencies
[workspace.dependencies.stellar-xdr]
version = "=22.0.0"
#git = "https://github.com/stellar/rs-stellar-xdr"
#rev = "67be5955a15f1d3a4df83fe86e6ae107f687141b"
default-features = false

[workspace.dependencies.wasmi]
package = "soroban-wasmi"
version = "=0.31.1-soroban.20.0.1"
git = "https://github.com/stellar/wasmi"
rev = "0ed3f3dee30dc41ebe21972399e0a73a41944aa0"

# [patch."https://github.com/stellar/rs-stellar-xdr"]
# [patch.crates-io]
# stellar-xdr = { path = "../rs-stellar-xdr" }
# [patch."https://github.com/stellar/wasmi"]
# soroban-wasmi = { path = "../wasmi/crates/wasmi/" }
# soroban-wasmi_core = { path = "../wasmi/crates/core/" }

[profile.release]
lto = true

[profile.test-opt]
inherits = "test"
opt-level = 3
debug = false
