[package]
name = "soroban-builtin-sdk-macros"
description = "Soroban builtin SDK macros."
homepage = "https://github.com/stellar/rs-soroban-env"
repository = "https://github.com/stellar/rs-soroban-env"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.73"

[lib]
proc-macro = true

[dependencies]
syn = {version="2.0",features=["full"]}
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.11.0"

[package.metadata.docs.rs]
all-features = true
