[package]
name = "soroban-builtin-sdk-macros"
description = "Soroban builtin SDK macros."
homepage = "https://github.com/stellar/rs-soroban-env"
repository = "https://github.com/stellar/rs-soroban-env"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = {version="2.0.39",features=["full"]}
quote = "1.0.33"
proc-macro2 = "1.0.69"
itertools = "0.10.5"

[package.metadata.docs.rs]
all-features = true
