[package]
name = "soroban-env-common"
description = "Soroban contract environment common types and functionality."
homepage = "https://github.com/stellar/rs-soroban-env"
repository = "https://github.com/stellar/rs-soroban-env"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version.workspace = true
readme = "../README.md"
edition = "2021"
rust-version = "1.69"

[build_dependencies]
crate-git-revision = "0.0.4"

[dependencies]
soroban-env-macros = { workspace = true }
stellar-xdr = { workspace = true, default-features = false, features = [ "next" ] }
wasmi = { workspace = true, optional = true }
serde = { version = "1.0.0", features = ["derive"], optional = true }
static_assertions = "1.1.0"
ethnum = "1.3.2"
arbitrary = { version = "1.1.3", features = ["derive"], optional = true }

[features]
std = ["stellar-xdr/std", "stellar-xdr/base64"]
serde = ["dep:serde", "stellar-xdr/serde"]
vm = ["wasmi"]
testutils = ["dep:arbitrary", "stellar-xdr/arbitrary"]

[package.metadata.docs.rs]
all-features = true
