[package]
name = "soroban-env-common"
description = "Soroban contract environment common types and functionality."
homepage = "https://github.com/stellar/rs-soroban-env"
repository = "https://github.com/stellar/rs-soroban-env"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version.workspace = true
readme = "../README.md"
edition = "2021"
rust-version.workspace = true

[build-dependencies]
crate-git-revision = "0.0.6"

[dependencies]
soroban-env-macros = { workspace = true }
stellar-xdr = { workspace = true, default-features = false, features = [ "curr" ] }
wasmi = { workspace = true, optional = true }
wasmparser = { workspace = true, optional = true}
serde = { version = "1.0.192", features = ["derive"], optional = true }
static_assertions = "1.1.0"
ethnum = "1.5.0"
arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
num-traits = {version = "0.2.17", default-features = false}
num-derive = "0.4.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tracy-client = { version = "0.17.0", features = ["enable", "timer-fallback"], default-features = false, optional = true }

[dev-dependencies]
num_enum = "0.7.1"
num-traits = "0.2.17"

[features]
std = ["stellar-xdr/std", "stellar-xdr/base64"]
serde = ["dep:serde", "stellar-xdr/serde"]
wasmi = ["dep:wasmi", "dep:wasmparser"]
testutils = ["dep:arbitrary", "stellar-xdr/arbitrary"]
next = ["stellar-xdr/next", "soroban-env-macros/next"]
tracy = ["dep:tracy-client"]
shallow-val-hash = []

[package.metadata.docs.rs]
all-features = true
