[package]
name = "soroban-env-guest"
description = "Soroban contract guest environment."
homepage = "https://github.com/stellar/rs-soroban-env"
repository = "https://github.com/stellar/rs-soroban-env"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version.workspace = true
readme = "../README.md"
edition = "2021"
rust-version = "1.69"

[dependencies]
soroban-env-common = { workspace = true, default-features = false, features = [] }
static_assertions = "1.1.0"

[package.metadata.docs.rs]
all-features = true

[features]
testutils = ["soroban-env-common/testutils"]
