[package]
name = "soroban-env-macros"
description = "Soroban contract environment macros."
homepage = "https://github.com/stellar/rs-soroban-env"
repository = "https://github.com/stellar/rs-soroban-env"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version = "0.0.4"
edition = "2021"
rust-version = "1.63"

[lib]
proc-macro = true

[dependencies]
stellar-xdr = { version = "0.0.2", features = ["next", "std"] }
syn = {version="1.0",features=["full"]}
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.10.3"

[package.metadata.docs.rs]
all-features = true
