[package]
name = "soroban-fuzz-host"
version = "0.0.0"
description = "Collection of fuzzing targets for soroban host, do not publish"
edition = "2021"
publish = false
rust-version = "1.71"

[workspace]
members = [
    "debug_logging",
]

[profile.release]
debug = 1

[workspace.dependencies]
soroban-env-common ={ path = "../soroban-env-common"}
soroban-env-host ={ path = "../soroban-env-host"}
soroban-synth-wasm ={ path = "../soroban-synth-wasm"}
arbitrary = { version = "1.3.0", features = ["derive"] }
