[package]
name = "soroban-synth-wasm"
description = "Utilities for synthesizing soroban contract wasm modules."
homepage = "https://github.com/stellar/rs-soroban-env"
repository = "https://github.com/stellar/rs-soroban-env"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.73"
publish = false

[dependencies]
wasm-encoder = "0.18.0"
wasmparser = "0.106.0"
soroban-env-common = { workspace = true }
arbitrary = { version = "1.3.0", features = ["derive"] }
soroban-env-macros = { workspace = true }

[features]
next = ["soroban-env-common/next"]
testutils = ["soroban-env-common/testutils"]

[dev-dependencies]
expect-test = "1.4.1"
wasmprinter = "0.2.72"
