[package]
name = "stellar-contract-env-common"
version = "0.0.0"
edition = "2021"

[dependencies]
static_assertions = "1.1.0"
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "b2d367f04706af7f21a7a6a7abb4920e18dacadb", default-features = false, features = ["next"] }
# stellar-xdr = { path = "../../rs-stellar-xdr", default-features = false, features = ["next"] }

# wasmi is an optional dependency only to let us impl its type conversion
# trait on RawVal locally in this crate; the VM itself is used in the host. 
wasmi = { version = "0.11.0", optional = true }

[features]
std = ["stellar-xdr/std"]
vm = ["wasmi"]
