[package]
name = "stellar-contract-env-common"
version = "0.0.0"
edition = "2021"

[dependencies]
static_assertions = "1.1.0"
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "277d41c3", default-features = false, features = ["next"] }
# stellar-xdr = { path = "../../rs-stellar-xdr", default-features = false, features = ["next"] }

# wasmi is an optional dependency only to let us impl its type conversion
# trait on RawVal locally in this crate; the VM itself is used in the host. 
wasmi = { git = "https://github.com/stellar/wasmi", rev = "4f35508c1a2475ed5d33955023f073639e7ff7df", optional = true }

[features]
std = ["stellar-xdr/std"]
vm = ["wasmi"]
