[package]
name = "stellar-contract-env-host"
version = "0.0.0"
edition = "2021"

[dependencies]
stellar-contract-env-common = { path = "../stellar-contract-env-common", features = [
    "std",
] }
static_assertions = "1.1.0"
im-rc = "15.0.0"
num-bigint = "0.4"
num-rational = "0.4"
thiserror = "1.0.31"
wasmi = { version = "0.11.0", optional = true }
parity-wasm = { version = "0.42.0", optional = true }
sha2 = "0.10.2"
ed25519-dalek = "1.0.1"
hex = "0.4.3"

[features]
vm = ["wasmi", "parity-wasm", "stellar-contract-env-common/vm"]
